--- a/.github/workflows/anchore-syft.yml
+++ b/.github/workflows/anchore-syft.yml
@@ -20,23 +20,16 @@ jobs:
 
     # Generate SBOM for frontend
     - name: Generate SBOM for frontend
-      uses: anchore/sbom-action@bb716408e75840bbb01e839347cd213767269d4a
+      uses: anchore/sbom-action@v0
       with:
         image: "localbuild/frontend:latest"
         artifact-name: sbom-frontend
 
     # Generate SBOM for backend
     - name: Generate SBOM for backend
-      uses: anchore/sbom-action@bb716408e75840bbb01e839347cd213767269d4a
+      uses: anchore/sbom-action@v0
       with:
         image: "localbuild/backend:latest"
         artifact-name: sbom-backend
 
-    # Upload both SBOMs as artifacts
-    - name: Upload SBOMs as artifacts
-      uses: actions/upload-artifact@v4
-      with:
-        name: sbom-reports
-        path: |
-          sbom-frontend.spdx.json
-          sbom-backend.spdx.json
+    
